tests/compile_errors/019-invalid-int-hex-literal.buzz
// '_' must be between digits
test "invalid hex literal" {
   _ = 0x_100;
}
